--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bikcraft Teste</title>
+    <title>Bikcraft</title>
+    
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
     <img src="./img/bikcraft.svg" alt="Logo da Bikcraft">
     
+    <button class="menu-toggle">☰</button>
     <ul class="menu">
     <li><a href="">Sobre</a></li>
     <li><a href="">Produtos</a></li>
